clusters/home/apps/uptime-kuma/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
  - port: 3001
    targetPort: 3001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  labels:
    name: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Open-source collaborative bookmark manage
    gethomepage.dev/group: Apps/Services
    gethomepage.dev/icon: uptime-kuma
    gethomepage.dev/name: uptime-kuma
    gethomepage.dev/pod-selector: app=uptime-kuma
    gethomepage.dev/weight: "1"
    glance/name: "Uptime Kuma"
    glance/icon: "si:uptimekuma"
spec:
  rules:
  - host: uptime-kuma.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptime-kuma
            port: 
              number: 3001
